feat: 컴파일에러로 인한 코드 수정